Fixed scrollbar

--- a/src/Sidekick.Presentation.Blazor/Common/SidekickLayout.razor.scss
+++ b/src/Sidekick.Presentation.Blazor/Common/SidekickLayout.razor.scss
@@ -1,5 +1,5 @@
 .sidekick-container {
-    &::deep {
+    ::deep {
         .mud-main-content {
             height: calc(100vh - var(--mud-appbar-min-height));
             overflow-y: auto;
